# vite-grin-wallet-ios

./: .gitattributes  .travis.yml  LICENSE  README.md  Vite_GrinWallet.podspec  build_ios.sh
Example/: Podfile
Example/Tests/: Tests.swift
Example/Vite_GrinWallet/: AppDelegate.swift  ViewController.swift
Example/Vite_GrinWallet.xcodeproj/: project.pbxproj
Example/Vite_GrinWallet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Example/Vite_GrinWallet.xcodeproj/xcshareddata/xcschemes/: Vite_GrinWallet-Example.xcscheme
Example/Vite_GrinWallet.xcworkspace/: contents.xcworkspacedata
Example/Vite_GrinWallet/Base.lproj/: LaunchScreen.xib  Main.storyboard
Vite_GrinWallet/Classes/: GrinBridge.swift  GrinTypes.swift  grinwallet.h
rust/: Cargo.toml
rust/croaring-rs/croaring-sys/: Cargo.toml  build.rs
rust/src/: lib.rs
