[package]
name = "vite_grin_wallet"
version = "0.1.0"
authors = ["xx@xx.org"]
description = "Grin mobile lib"
publish = false
edition = "2018"

[dependencies]
libc = "0.2.45"
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = "2.31"
ctrlc = { version = "3.1", features = ["termination"] }
cursive = "0.9.0"
humansize = "1.1.0"
daemonize = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
log = "0.4"
term = "0.5"
prettytable-rs = "0.7"
uuid = "0.6.5"

grin_wallet = { git = "https://github.com/haoshenyang/grin", rev = "caad24364cf116434b5c6a88301f2bd678d2c2eb" }
grin_core = { git = "https://github.com/haoshenyang/grin", rev = "caad24364cf116434b5c6a88301f2bd678d2c2eb" }
grin_util = { git = "https://github.com/haoshenyang/grin", rev = "caad24364cf116434b5c6a88301f2bd678d2c2eb" }
grin_keychain = { git = "https://github.com/haoshenyang/grin", rev = "caad24364cf116434b5c6a88301f2bd678d2c2eb" }

[build-dependencies]
built = "0.3"
reqwest = "0.9"
flate2 = "1.0"
tar = "0.4"


[lib]
name = "wallet"
crate-type = ["staticlib"]

[patch.crates-io]
croaring = { path = "./croaring-rs" }
