[package]
name = "vite_grin_wallet"
version = "0.1.0"
authors = ["xx@xx.org"]
description = "Grin mobile lib"
publish = false
edition = "2018"

[dependencies]

clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.7"
log = "0.4"
uuid = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"

#libc = "0.2.45"
#blake2-rfc = "0.2"
#chrono = "0.4.4"
#cursive = "0.9.0"
#humansize = "1.1.0"
#daemonize = "0.3"
#term = "0.5"

grin_wallet_api = { git = "https://github.com/mimblewimble/grin-wallet", rev = "c12f61d1543539167abc8acb595229ad7d238487" }
grin_wallet_impls = { git = "https://github.com/mimblewimble/grin-wallet", rev = "c12f61d1543539167abc8acb595229ad7d238487" }
grin_wallet_libwallet = { git = "https://github.com/mimblewimble/grin-wallet", rev = "c12f61d1543539167abc8acb595229ad7d238487" }
grin_wallet_config = { git = "https://github.com/mimblewimble/grin-wallet", rev = "c12f61d1543539167abc8acb595229ad7d238487" }
grin_wallet_util = { git = "https://github.com/mimblewimble/grin-wallet", rev = "c12f61d1543539167abc8acb595229ad7d238487" }


[build-dependencies]
built = "0.3"
reqwest = "0.9"
flate2 = "1.0"
tar = "0.4"
cbindgen = "0.8.3"


[lib]
name = "wallet"
crate-type = ["staticlib"]

[patch.crates-io]
croaring = { path = "./croaring-rs", version = "0.3.9" }
